--- a/GPSMaui/Platforms/iOS/Info.plist
+++ b/GPSMaui/Platforms/iOS/Info.plist
@@ -28,5 +28,9 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.companyname.gpsmaui</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Fill in a reason why your app needs access to location.</string>
 </dict>
 </plist>
